<resources>
    <string name="app_name">Inteligentne rolety</string>
    <string name="template_item_module_name">xxx.xxx.xxx.xxx:0x0000</string>
    <string name="template_item_module_ip">IP: xxx.xxx.xxx.xxx</string>
    <string name="template_item_module_id">ID: 0x0000</string>
    <string name="template_item_module_button">Add</string>
    <string name="template_item_edit_module_button">Edit</string>
    <string name="template_item_remove_module_button">Remove</string>
    <string name="main_scanner_button">Scan network for devices</string>
    <string name="saved_modules">Saved modules</string>
    <string name="network_modules">Network modules</string>
    <string name="choose_mode">Choose mode</string>
    <string name="manual_mode">Manual</string>
    <string name="adaptive_mode">Adaptive</string>
    <string name="set_adaptive_mode">Set adaptive mode</string>
    <string name="set_id">Set ID</string>
    <string name="set_window_blind_level">Set Window Blind level:</string>
    <string name="current_light_level">Current Light Level:</string>
    <string name="_255">255</string>
    <string name="get_current_level">Get current level</string>
    <string name="set_level">Set Level</string>
    <string name="coordinates">Coordinates:</string>
    <string name="get_weather">Get weather</string>
</resources>