<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="10"
    android:background="@drawable/back">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/item_module_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:text="@string/template_item_module_name">
        </TextView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/item_module_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/template_item_module_ip">
            </TextView>

            <TextView
                android:id="@+id/item_module_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/template_item_module_id">
            </TextView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/item_module_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/template_item_module_button"
        android:textSize="16sp"
        android:background="@color/primary"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:layout_weight="8">
    </androidx.appcompat.widget.AppCompatButton>

</androidx.appcompat.widget.LinearLayoutCompat>