<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">

            <TextView
                android:id="@+id/saved_modules_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:paddingStart="15dp"
                android:text="@string/saved_modules"
                android:textColor="@color/dark"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="gone"/>

            <view class="androidx.appcompat.app.AlertController$RecycleListView"
                android:id="@+id/saved_modules_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:itemCount="1"
                tools:listitem="@layout/item_module" />

            <TextView
                android:id="@+id/network_modules_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:paddingStart="15dp"
                android:text="@string/network_modules"
                android:textColor="@color/dark"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="gone"/>

            <view class="androidx.appcompat.app.AlertController$RecycleListView"
                android:id="@+id/network_modules_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/item_module" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/scanner_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:backgroundTint="@color/primary"
        app:tint="@android:color/white"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/main_scanner_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>